--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  mask_text_input_formatter: ^2.9.0
+  credit_card_scanner: ^1.0.5
 
 dev_dependencies:
   flutter_test:
